.happypack/s--1198654895
SyntaxError: Unexpected token (66:2)

[0m [90m 64 | [39m  mockSave [33m=[39m (e) [33m=>[39m {
 [90m 65 | [39m    [36mif[39m((e[33m.[39mctrlKey [33m||[39m e[33m.[39mmetaKey ) [33m&&[39m e[33m.[39mkeyCode [33m===[39m [35m83[39m)
[31m[1m>[22m[39m[90m 66 | [39m  }
 [90m    | [39m  [31m[1m^[22m[39m
 [90m 67 | [39m
 [90m 68 | [39m
 [90m 69 | [39m  render() {[0m

Error
    at transpile (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:274:9
    at /Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:330:17
    at Object.callback (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/fnOncePedantic.js:10:15)
    at Object.module.exports (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/eslint-loader/index.js:207:8)
    at applySyncOrAsync (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoader (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoader (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:222:4)